compiler-plugin/testData/diagnostics/simple.kt
// RUN_PIPELINE_TILL: FRONTEND

package foo.bar

import org.jetbrains.kotlin.compiler.plugin.template.SomeAnnotation

<!NO_VALUE_FOR_PARAMETER!>@SomeAnnotation<!>
fun test() {
    val s = MyClass().foo()
    s.<!UNRESOLVED_REFERENCE!>inc<!>() // should be an error
}
